build.log
install
+- install nullclaw
   +- compile exe nullclaw ReleaseFast native 1 errors
src/providers/gemini_cli.zig:96:68: error: unused function parameter
    fn runGemini(allocator: std.mem.Allocator, prompt: []const u8, model: []const u8) ![]const u8 {
                                                                   ^~~~~
error: the following command failed with 1 compilation errors:
/opt/zig/zig-x86_64-linux-0.15.2/zig build-exe .zig-cache/o/f4756723d067756922f9f7704ad9ae1e/libsqlite3.a -fstrip -fomit-frame-pointer -fno-unwind-tables -OReleaseFast -I .zig-cache/o/3a8809f156846b246a8b58aee0dcf73a --dep nullclaw --dep build_options -Mroot=/home/sangvu/workspace/ai/nullclaw/src/main.zig .zig-cache/o/f4756723d067756922f9f7704ad9ae1e/libsqlite3.a .zig-cache/o/f4756723d067756922f9f7704ad9ae1e/libsqlite3.a -OReleaseFast -I .zig-cache/o/3a8809f156846b246a8b58aee0dcf73a -I .zig-cache/o/3a8809f156846b246a8b58aee0dcf73a --dep build_options --dep websocket -Mnullclaw=/home/sangvu/workspace/ai/nullclaw/src/root.zig -Mbuild_options=.zig-cache/c/44730e644b6469e02c30817e3395cf7c/options.zig -OReleaseFast --dep build -Mwebsocket=/home/sangvu/.cache/zig/p/websocket-0.1.0-ZPISdRlzAwBB_Bz2UMMqxYqF6YEVTIBoFsbzwPUJTHIc/src/websocket.zig -Mbuild=.zig-cache/c/9df3ebb56e512146581134c82a20886e/options.zig -lc --cache-dir .zig-cache --global-cache-dir /home/sangvu/.cache/zig --name nullclaw -dead_strip_dylibs --zig-lib-dir /opt/zig/zig-x86_64-linux-0.15.2/lib/ --listen=-

Build Summary: 4/7 steps succeeded; 1 failed
install transitive failure
+- install nullclaw transitive failure
   +- compile exe nullclaw ReleaseFast native 1 errors

error: the following build command failed with exit code 1:
.zig-cache/o/0a89386efacb0c4cc33356c84f60d0ac/build /opt/zig/zig-x86_64-linux-0.15.2/zig /opt/zig/zig-x86_64-linux-0.15.2/lib /home/sangvu/workspace/ai/nullclaw .zig-cache /home/sangvu/.cache/zig --seed 0x7f814dc9 -Z1776ca9e9a362ca8 -Doptimize=ReleaseFast
